# routes/index.js
@@ -1,13 +1,22 @@
 const router = require('express').Router();
+const passport = require('passport');
 
 router.use('/', require('./swagger'));
-
-router.get('/', (req, res) => {
-    //swagger.tags=['Jeni Hales']
-    res.send('Jeni Hales');
-});
-
 router.use('/students', require('./students'));
 router.use('/teachers', require('./teachers'));
+
+// router.get('/', (req, res) => {
+//     //swagger.tags=['Jeni Hales']
+//     res.send('Jeni Hales');
+// });
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
